v0.05 Better code readability + more 🐛 fix

--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -7,7 +7,7 @@
 
     .result {
         display: flex;
-        justify-content: start;
+        justify-content: center;
         flex-wrap: wrap;
         align-items: center;
         margin-top: 3em;
